[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/menus/main/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/2d/KillPill_background.jpg" type="Texture" id=2]
[ext_resource path="res://assets/2d/KillPill_pills.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/options/Options.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/music/main_theme.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/themes/main_theme.theme" type="Theme" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="ImageContainer"]
margin_right = 800.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true

[node name="TextureRect" type="TextureRect" parent="ImageContainer"]
margin_right = 800.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_bottom = -30.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 770.0
margin_bottom = 570.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 383.0
margin_bottom = 570.0
size_flags_horizontal = 3

[node name="Options" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 383.0
margin_bottom = 570.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 2

[node name="TutorialButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
margin_top = 360.0
margin_right = 383.0
margin_bottom = 390.0
rect_min_size = Vector2( 0, 30 )
text = "btn_tuto"

[node name="PlayButton2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
margin_top = 420.0
margin_right = 383.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 30 )
text = "btn_play"

[node name="OptionsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
margin_top = 480.0
margin_right = 383.0
margin_bottom = 510.0
rect_min_size = Vector2( 0, 30 )
text = "btn_options"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
margin_top = 540.0
margin_right = 383.0
margin_bottom = 570.0
rect_min_size = Vector2( 0, 30 )
text = "btn_quit"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 387.0
margin_right = 770.0
margin_bottom = 570.0
size_flags_horizontal = 3

[node name="Options" parent="." instance=ExtResource( 5 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -464.0
margin_top = -318.5
margin_right = 464.0
margin_bottom = 318.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true
bus = "Music"
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options/PlayButton2" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="on_close" from="Options" to="." method="_on_Options_on_close"]
